--- a/Readme
+++ b/Readme
@@ -1,3 +1,5 @@
 PureBasic Framwork
 It's  in Beta V0.1 State
 Do not use any code in your projects until you tested it!
+
+Download it, only if you want to be part of the development!
