--- a/Readme
+++ b/Readme
@@ -1,6 +1,7 @@
 
 PureBasic Framwork
-It's  in Beta V0.1 State
+It's  mostly in Beta or Brainstorming State
+See comments in Module Code for the actual relase State!
 Do not use any code in your projects until you tested it!
 
 Download it, only if you want to be part of the development!
