--- a/History.txt
+++ b/History.txt
@@ -62,5 +62,5 @@ Until know I'm not sure what is better:
 For the first I decided to use 'ModuleName' and changed all public constants 
 in the Modules to #'ModuleName_'ConstantName'
 BUF::#BUF_AlignInteger  but with use of UseModule Buffer it's #BUF_AlingInteger.
-I think this helps when reading a code to now exactly where the constans from
+I think this helps when reading a code to know exactly where the constans from
 and do not run into Name conflicts
